[package]
name = "polypolish"
version = "0.4.0"
authors = ["Ryan Wick <rrwick@gmail.com>"]
edition = "2018"
description = "short-read polishing of long-read assemblies"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2.0"
textwrap = "0.14"
term_size = "0.3"
num-format = "0.4"
flate2 = "1.0"
clap = { version = "3.0.0-beta.2", features = ["wrap_help"] }
regex = "1"
lazy_static = "1.4.0"
libmath = "0.2"
