[package]
name = "polypolish"
version = "0.5.0"
authors = ["Ryan Wick <rrwick@gmail.com>"]
edition = "2018"
description = "short-read polishing of long-read assemblies"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help"] }
colored = "2.0"
flate2 = "1.0"
lazy_static = "1.4.0"
num-format = "0.4"
regex = "1"
term_size = "0.3"
textwrap = "0.14"
