[package]
name = "polypolish"
version = "0.6.1"
authors = ["Ryan Wick <rrwick@gmail.com>"]
edition = "2021"
description = "short-read polishing of long-read assemblies"
rust-version = "1.75"

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help"] }
colored = "2.0"
flate2 = "1.0"
lazy_static = "1.4"
num-format = "0.4"
regex = "1.10"
tempfile = "3.9"
term_size = "0.3"
textwrap = "0.16"
